# Skin-Cure

./: README.md
Frontend/: index.html  package-lock.json  package.json  tsconfig.app.json
Frontend/src/: App.tsx  index.css  main.tsx
Frontend/src/Pages/: DashBoard.tsx  Home.tsx  SignUp.tsx  Signin.tsx
Frontend/src/components/: BG.tsx  Loginform.tsx
Frontend/src/components/ui/: button.tsx  file-upload.tsx
Ml/notebooks/: main.ipynb
PyBackend/: README.md  main.py  pyproject.toml
